# Brahm-Kosh

./: .brahmkoshignore.example  .gitignore  README.md  pyproject.toml  scratch.js  scratch.py  scratch_html_test.py
.github/workflows/: test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
brahm_kosh/: __init__.py  cli.py  cli_diff.py  engine.py  models.py  parse_cache.py  server.py  watcher.py
brahm_kosh/adapters/: __init__.py  c_adapter.py  csharp_adapter.py  css_adapter.py  dart_adapter.py  go_adapter.py  html_adapter.py  java_adapter.py  javascript_adapter.py  php_adapter.py  python_adapter.py  r_adapter.py  registry.py  rust_adapter.py  sql_adapter.py
brahm_kosh/analysis/: __init__.py  architect.py  complexity.py  dependencies.py  domains.py  hotspots.py  impact.py  narrator.py  purpose.py  refactor.py  symbol_impact.py
brahm_kosh/frontend/: code-explorer.css  code-explorer.js  graph-extras.js  index.html  search.js
tests/: test_adapters.py  test_domains.py  test_impact.py  test_refactor.py  test_resolver.py  test_server_security.py  test_symbol_impact.py
tests/fixtures/c/: main.c
tests/fixtures/frontend/: index.html  style.css
tests/fixtures/js/: app.js
tests/fixtures/py/: app.py  shared.py
