[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brahm-kosh"
version = "0.1.0"
description = "A Codebase Intelligence Engine — turns code into structure, structure into insight, and insight into confidence."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Krish"},
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
brahm-kosh = "brahm_kosh.cli:main"

[tool.setuptools.packages.find]
include = ["brahm_kosh*"]
